syntax = "proto3";

package io.mystore.shipping2.view;

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "io/mystore/shipping2/view/order_sku_item.proto";
import "io/mystore/shipping2/entity/order_sku_item_entity.proto";

option java_outer_classname = "OrderSkuItemsBackOrderedBySkuModel";

service OrderSkuItemsBackOrderedBySku {
  option (akkaserverless.codegen) = {
    view: {}
  };

  rpc GetOrderSkuItemsBackOrderedBySku(GetOrderSkuItemsBackOrderedBySkuRequest) returns (GetOrderSkuItemsBackOrderedBySkuResponse) {
    option (akkaserverless.method).view.query = {
      query: "SELECT * AS order_sku_items"
             "  FROM order_sku_items_back_ordered_by_sku"
             " WHERE back_ordered_utc.seconds > 0"
             "   AND sku_id = :skuId"
    };
    option (google.api.http) = {
      get: "/order-sku-items-back-ordered-by-sku"
    };
  }

  rpc OnCreatedOrderSkuItem(entity.CreatedOrderSkuItem) returns (OrderSkuItem) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (akkaserverless.method).view.update = {
      table: "order_sku_items_back_ordered_by_sku"
      transform_updates: true
    };
  }

  rpc OnJoinedToStockSkuItem(entity.JoinedToStockSkuItem) returns (OrderSkuItem) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (akkaserverless.method).view.update = {
      table: "order_sku_items_back_ordered_by_sku"
      transform_updates: true
    };
  }

  rpc OnBackOrderedOrderSkuItem(entity.BackOrderedOrderSkuItem) returns (OrderSkuItem) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (akkaserverless.method).view.update = {
      table: "order_sku_items_back_ordered_by_sku"
      transform_updates: true
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (OrderSkuItem) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "order_sku_item"
    };
    option (akkaserverless.method).view.update = {
      table: "order_sku_items_back_ordered_by_sku"
      transform_updates: true
    };
  }
}

message GetOrderSkuItemsBackOrderedBySkuRequest {
  string skuId = 1;
}

message GetOrderSkuItemsBackOrderedBySkuResponse {
  repeated OrderSkuItem order_sku_items = 1;
}
