syntax = "proto3";

package io.mystore.stock.entity;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "ShippableSkuItemsTimerEntity";

message ShippableSkuItemsTimerState {
  string sku_id = 1;
  google.protobuf.Timestamp started = 2;
  google.protobuf.Timestamp stop_after = 3;
  google.protobuf.Timestamp last_pinged = 4;
}
